<resources>
    <string name="app_name">CameraXTest</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="kg">KG-I</string>
    <string name="standard">Class</string>
    <string name="kg_ii">KG-II</string>
    <string name="kg_iii">KG-III</string>
    <string name="interests">Interests</string>
    <string-array name="interests">
        <item name="cricket">Cricket</item>
        <item name="football">Football</item>
        <item name="basketball">Basketball</item>
    </string-array>

    <string name="form_header">Enter Details</string>
</resources>