<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.FormFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

<!--            <ImageView-->
<!--                android:id="@+id/icon_cost_of_service"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:importantForAccessibility="no"-->
<!--                app:layout_constraintBottom_toBottomOf="@id/cost_of_service"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="@id/cost_of_service" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

<!--            <ImageView-->
<!--                android:id="@+id/icon_service_question"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:importantForAccessibility="no"-->
<!--                app:layout_constraintBottom_toBottomOf="@id/service_question"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="@id/service_question"-->
<!--                app:srcCompat="@drawable/ic_service" />-->

            <TextView
                android:id="@+id/gender_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/gender"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/male"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/standard_text"
                app:layout_constraintTop_toBottomOf="@id/gender_text">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />

            </RadioGroup>

            <TextView
                android:id="@+id/standard_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/standard"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/gender" />

            <RadioGroup
                android:id="@+id/standard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/kg_i"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/standard_text"
                app:layout_constraintTop_toBottomOf="@id/standard_text">

                <RadioButton
                    android:id="@+id/kg_i"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kg" />

                <RadioButton
                    android:id="@+id/kg_ii"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kg_ii" />

                <RadioButton
                    android:id="@+id/kg_iii"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kg_iii" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu"
                android:layout_margin="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/standard_text"
                app:layout_constraintTop_toBottomOf="@id/standard"
                android:hint="@string/interests">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/take_photo"
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/take_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/gender"
                app:layout_constraintTop_toBottomOf="@id/menu" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/take_photo" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>